fixed link author

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
           <li><a href="{{site.baseurl}}/about">About</a></li>
         </ul>
       </nav>
-      <p class="logo"><a href="/">{{ site.author }}</a></p>
+      <p class="logo"><a href="{{site.baseurl}}/">{{ site.author }}</a></p>
       <div class="search-icon-container">
         <span class="search-icon"><a><i class="fa fa-search" aria-hidden="true"></i></a></span>
       </div>
