social buttons in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
 <footer class="main-footer">
+
+  {% include social-list.html %}
+
   <div class="copyright">
     <p>{{site.time | date: '%Y'}} &copy; {{site.author}}</p>
   </div>
