--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 	<meta name="description" content="{{ page.description }}">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta property="og:image" content="">
+	{% if page.img %}<meta property="og:image" content="{{"/assets/img/" | prepend: site.baseurl | append : page.img}}">{% endif %}
 	<link rel="shortcut icon" href="{{ "/assets/img/favicon.png" | prepend: site.baseurl }}" type="image/x-icon">
 	<!-- Chrome, Firefox OS and Opera -->
 	<meta name="theme-color" content="#311e3e">
