--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,10 @@
         <ul>
           <li><a href="{{site.baseurl}}/">Blog</a></li>
           <li><a href="{{site.baseurl}}/about">About</a></li>
+          <li><a href="{{site.baseurl}}/tags">Tags</a></li>
         </ul>
       </nav>
-      <p class="logo"><a href="{{site.baseurl}}/">{{ site.author }}</a></p>
+      <p class="logo"><a href="{{site.baseurl}}/">{{ site.title }}</a></p>
       <div class="search-icon-container">
         <span class="search-icon"><a><i class="fa fa-search" aria-hidden="true"></i></a></span>
       </div>
