Third Post is ready to be published!

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,8 @@ layout: default
   {% include header.html %}
   <article class="article-page">
     <div class="page-image">
-      <div class="cover-image" style="background: url({{"/assets/img/" | prepend: site.baseurl | append : page.img}}) center no-repeat; background-size: cover;"></div>
+      <div class="cover-image" style="background: url(https://picsum.photos/2560/700/?random) center no-repeat; background-size: cover;"></div>
+      <!-- <div class="cover-image" style="background: url({{"/assets/img/" | prepend: site.baseurl | append : page.img}}) center no-repeat; background-size: cover;"></div> -->
     </div>
     <div class="wrapper">
       <div class="page-content">
