--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,66 @@
+span#github-btn {
+    display: flex;
+    justify-content: center;
+}
+
+.github-btn {
+    font: 11px/14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    height: 30px;
+}
+
+.gh-btn{
+    padding: 3px 10px 3px 8px;
+    color: #333;
+    font-size: 16px;
+    line-height: 22px;
+    text-decoration: none;
+    white-space: nowrap;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.gh-btn, .gh-ico {
+  float:left;
+}
+
+.gh-ico {
+    width: 20px;
+    height: 20px;
+    margin-right: 4px;
+    background-image: url(/assets/img/github_icon.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.gh-btn {
+    will-change: transform;
+    background-color:#eee;
+    background-image:linear-gradient(to bottom, #fcfcfc 0, #eee 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfcfc', endColorstr='#eeeeee', GradientType=0);
+    background-repeat:no-repeat;
+    border:1px solid #d5d5d5;
+    transition: 0.25s;
+}
+
+.gh-btn:hover,.gh-btn:focus{
+    text-decoration:none;
+    background-color:#ddd;
+    background-image:linear-gradient(to bottom, #eee 0, #ddd 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);
+    border-color: #ccc;
+    box-shadow: 0 0.5em 0.5em -0.4em #545454;
+    transform: translateY(-0.25em);
+}
+
+.gh-btn:active{
+    background-image:none;
+    background-color:#dcdcdc;
+    border-color:#b5b5b5;
+    box-shadow:inset 0 2px 4px rgba(0,0,0,0.15);
+    box-shadow: 0 0.5em 0.5em -0.4em #545454;
+    transform: translateY(-0.25em);
+}
+
 .highlight {
   background-color: #faf9f9;
   -webkit-border-radius: 3px;
