--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@ layout: default
           <h1 class="page-title">{{page.title}}</h1>
           <div class="page-date"><time datetime="{{page.date}}">{{page.date | date: '%Y, %b %d'}}</time></div>
         </div>
+        <div class="page-buttons">
         {% if page.github %}
           <span class="github-btn" id="github-btn">
             <a class="gh-btn" id="gh-btn" href="https://github.com/{{page.github}}" target="_blank" aria-label="Open on GitHub">
@@ -21,6 +22,7 @@ layout: default
             </a>
           </span>
         {% endif %}
+        </div>
         {{page.content | markdownify}}
         <div class="page-footer">
           <div class="page-tag">
